traefik/hp-200/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: controller
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: admin-web
