traefik/hp-200/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.od.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-ingress-service
            port:
              number: 8080
